--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 <body>
 
 <video id="bg-video" autoplay muted loop>
-  <source src="https://files.catbox.moe/qudl6x.mp4" type="video/mp4">
+  <source src="https://files.catbox.moe/1vefx3.mp4" type="video/mp4">
 </video>
 
 <audio id="bg-music" loop>
-  <source src="https://files.catbox.moe/qudl6x.mp4" type="audio/mp4">
+  <source src="https://files.catbox.moe/1vefx3.mp4" type="audio/mp4">
 </audio>
 
 <div class="nav">
