--- a/index.html
+++ b/index.html
@@ -1,318 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>ALVIN STORE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QRIS & Panel Shop Alvin</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
     }
-
-    html, body {
+    body, html {
       height: 100%;
-      font-family: Arial, sans-serif;
+      width: 100%;
       overflow: hidden;
-      color: white;
     }
-
-    .logo {
+    video#bg-video {
       position: fixed;
-      top: 20px;
-      left: 20px;
-      z-index: 10;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: cover;
+      z-index: -1;
     }
-
-    .logo img {
-      height: 50px;
-    }
-
-    .menu-button {
-      position: fixed;
+    .nav {
+      position: absolute;
       top: 20px;
       right: 20px;
-      z-index: 10;
-      font-size: 28px;
-      background: rgba(0,0,0,0.5);
+      z-index: 2;
+    }
+    .menu-btn {
+      font-size: 24px;
+      color: white;
+      background: none;
       border: none;
-      color: white;
-      padding: 10px 15px;
       cursor: pointer;
-      border-radius: 10px;
     }
-
-    .menu-items {
-      position: fixed;
-      top: 60px;
-      right: 20px;
-      background: rgba(0,0,0,0.8);
-      padding: 10px;
-      border-radius: 10px;
+    .menu {
       display: none;
-      z-index: 10;
+      position: absolute;
+      right: 0;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 10px;
+      border-radius: 5px;
     }
-
-    .menu-items button {
+    .menu a {
       display: block;
-      background: #444;
-      border: none;
       color: white;
-      padding: 10px 15px;
-      margin: 5px 0;
-      cursor: pointer;
-      border-radius: 10px;
+      text-decoration: none;
+      margin-bottom: 5px;
     }
-
-    .qris-section {
+    .container, .buy-panel {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      color: white;
       text-align: center;
+      z-index: 1;
     }
-
-    .qris-section img {
-      width: 150px; /* Lebih besar */
-      border-radius: 15px;
-      margin-bottom: 15px;
-    }
-
-    .wa-button {
-      background: #25d366;
-      border: none;
-      color: white;
-      padding: 12px 20px;
-      font-size: 16px;
-      border-radius: 12px;
-      cursor: pointer;
-      box-shadow: 0 4px #1b9e49;
-    }
-
-    .wa-button:hover {
-      background: #1ebc5e;
-    }
-
-    .bottom-buttons {
-      position: fixed;
-      bottom: 20px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      z-index: 10;
-    }
-
-    .bottom-buttons button {
-      background: rgba(255,255,255,0.1);
-      border: 1px solid white;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 15px;
-      cursor: pointer;
-      box-shadow: 2px 4px 10px rgba(0,0,0,0.5);
-      transition: all 0.3s ease;
-      backdrop-filter: blur(4px);
-    }
-
-    .bottom-buttons button:hover {
-      background: rgba(255,255,255,0.2);
-      transform: scale(1.05);
-    }
-
-    .panel-popup {
-      position: fixed;
-      top: 0;
-      right: -300px;
-      width: 300px;
-      height: 100%;
-      background: rgba(0,0,0,0.9);
+    .buy-panel {
+      display: none;
+      background: rgba(0, 0, 0, 0.6);
       padding: 20px;
-      box-shadow: -4px 0 10px rgba(0,0,0,0.5);
-      transition: right 0.5s ease;
-      z-index: 20;
+      border-radius: 15px;
     }
-
-    .panel-popup.show {
-      right: 0;
-    }
-
-    .panel-popup h3 {
-      margin-bottom: 15px;
-    }
-
-    .panel-popup .panel-list {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-    }
-
-    .panel-popup .panel-list button {
+    .panel-item {
+      margin: 10px 0;
+      background: rgba(255, 255, 255, 0.1);
       padding: 10px;
-      background: #333;
-      color: white;
+      border-radius: 10px;
+    }
+    button {
+      padding: 8px 16px;
       border: none;
       border-radius: 8px;
+      background-color: #25D366;
+      color: white;
+      font-weight: bold;
       cursor: pointer;
+      margin-top: 5px;
     }
-
-    .close-panel {
+    .back-btn {
       margin-top: 20px;
-      padding: 8px 15px;
-      background: #900;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+      background-color: crimson;
     }
-    .qris-img {
-  width: 220px;
-  height: auto;
-  border-radius: 16px;
-  box-shadow: 
-    inset 0 0 10px rgba(255,255,255,0.2),
-    0 10px 25px rgba(0,0,0,0.6),
-    0 0 15px rgba(0, 255, 255, 0.3);
-  transition: all 0.3s ease;
-  transform: perspective(800px) rotateX(3deg);
-}
-
-.qris-img:hover {
-  transform: scale(1.03) rotateX(0deg);
-  box-shadow: 
-    inset 0 0 20px rgba(255,255,255,0.3),
-    0 15px 35px rgba(0,0,0,0.8),
-    0 0 25px rgba(0, 255, 255, 0.5);
-}
-#video-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: -1;
-}
-
-#video-background {
-  width: 80%;
-  height: 80%;
-  object-fit: cover;
-}
+    img.qris {
+      width: 200px;
+      margin: 20px 0;
+      border-radius: 15px;
+      box-shadow: 0 0 20px white;
+    }
   </style>
 </head>
-<body><marquee behavior="scroll" direction="left" scrollamount="6" style="
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 12px 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-shadow: 0 0 5px #00f2ff, 0 0 10px #00f2ff, 0 0 15px #00f2ff;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.6);
-  z-index: 1000;
-">
-  ✨ Made by ALVIN ✨ Made by ALVIN ✨ Made by ALVIN ✨
-</marquee>
+<body>
 
-  <!-- Background Video -->
+<video id="bg-video" autoplay muted loop>
+  <source src="https://files.catbox.moe/1vefx3.mp4" type="video/mp4">
+</video>
 
+<audio id="bg-music" loop>
+  <source src="https://files.catbox.moe/1vefx3.mp4" type="audio/mp4">
+</audio>
 
-  <!-- Menu -->
-  <button class="menu-button" id="menuBtn">☰</button><div class="menu-items" id="menuItems">
-  <button onclick="showPanel()">🧰 BUY PANEL</button>
-  <button onclick="showTampilan()">🎨 BUY TAMPILAN</button>
-</div>
-<
-
-<div id="video-wrapper">
-  <video id="video-background" autoplay muted loop>
-    <source src="https://files.catbox.moe/fe6oe5.mp4" type="video/mp4">
-  </video>
+<div class="nav">
+  <button class="menu-btn" onclick="toggleMenu()">≡</button>
+  <div class="menu" id="menu">
+    <a href="#" onclick="showPanel()">BUY PANEL</a>
+  </div>
 </div>
 
-
-  <!-- QRIS Section -->
-  <div class="qris-section">
-    <img src="https://files.catbox.moe/2c0auy.jpeg" alt="QRIS" class="qris-img">
-    <p>📷 Scan QR ini</p>
-    <button class="wa-button" onclick="window.open('https://wa.me/6283106133182', '_blank')">Kirim ke WA Admin</button>
-  </div>
-
-  <!-- Bottom Buttons -->
-  <div class="bottom-buttons">
-    <button onclick="window.open('https://t.me/admin', '_blank')">📨 Tele Admin</button>
-    <button onclick="window.open('tel:083106133182')">📞 Nomor Admin</button>
- <button onclick="window.open('https://t.me/testimoni_panel', '_blank')">🧾 Testimoni</button>
-    <button onclick="window.open('https://t.me/channel', '_blank')">📣 Link Saluran</button>
-  </div>
-
-  <!-- Panel Popup --><div class="panel-popup" id="panelPopup">
-  <h3>🧰 Pilih Produk</h3>
-
-  <h4>📦 Paket Panel</h4>
-  <div class="panel-list">
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%201GB" target="_blank"><button>1GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%202GB" target="_blank"><button>2GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%203GB" target="_blank"><button>3GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%204GB" target="_blank"><button>4GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%205GB" target="_blank"><button>5GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%206GB" target="_blank"><button>6GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%207GB" target="_blank"><button>7GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%208GB" target="_blank"><button>8GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%209GB" target="_blank"><button>9GB</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20panel%2010GB" target="_blank"><button>10GB</button></a>
-  </div>
-  <button class="close-panel" onclick="hidePanel()">← Kembali</button>
+<div class="container" id="main-content">
+  <h2>Scan QRIS Di Bawah</h2>
+  <p>Setelah scan, kirim screenshot ke admin:</p>
+  <img src="https://files.catbox.moe/2c0auy.jpeg" class="qris">
+  <br>
+  <a href="https://wa.me/6283106133182" target="_blank"><button>Kirim ke Admin</button></a>
 </div>
 
-<!-- Popup TAMPILAN -->
-<div class="panel-popup" id="tampilanPopup" style="display: none;">
-  <h3>🎨 Pilih Tampilan</h3>
-  <div class="panel-list">
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20tampilan%20dark%20mode" target="_blank"><button>Dark Mode</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20tampilan%20neon%20UI" target="_blank"><button>Neon UI</button></a>
-    <a href="https://wa.me/6283106133182?text=Halo%20admin,%20saya%20mau%20beli%20tampilan%204D%20style" target="_blank"><button>4D Style</button></a>
-  </div>
-  <button class="close-panel" onclick="hideTampilan()">← Kembali</button>
+<div class="buy-panel" id="panel-shop">
+  <h2>List Panel Pterodactyl</h2>
+  <div id="panel-list"></div>
+  <button class="back-btn" onclick="backToQR()">Kembali</button>
 </div>
 
-  <!-- Audio -->
-  <audio id="menuSound" src="https://files.catbox.moe/qz9epp.mp3" preload="auto"></audio>
+<script>
+  const bgMusic = document.getElementById('bg-music');
+  const panelList = document.getElementById('panel-list');
 
-  <script>
-    const menuBtn = document.getElementById('menuBtn');
-    const menuItems = document.getElementById('menuItems');
-    const audio = document.getElementById('menuSound');
+  function toggleMenu() {
+    const menu = document.getElementById("menu");
+    menu.style.display = menu.style.display === "block" ? "none" : "block";
+  }
 
-    menuBtn.addEventListener('click', () => {
-      menuItems.style.display = menuItems.style.display === 'block' ? 'none' : 'block';
-      audio.play();
-    });
+  function showPanel() {
+    document.getElementById("main-content").style.display = "none";
+    document.getElementById("panel-shop").style.display = "block";
+    bgMusic.play();
 
-function showPanel() {
-  document.getElementById('panelPopup').classList.add('show');
-  document.getElementById('tampilanPopup').classList.remove('show'); // Tutup yang lain
-}
+    // Auto generate 1GB - 10GB
+    panelList.innerHTML = '';
+    for (let i = 1; i <= 10; i++) {
+      panelList.innerHTML += `
+        <div class="panel-item">
+          <p>${i}GB Panel Pterodactyl</p>
+          <a href="https://wa.me/6283106133182?text=Halo%20saya%20mau%20beli%20panel%20${i}GB" target="_blank">
+            <button>Beli Sekarang</button>
+          </a>
+        </div>`;
+    }
+  }
 
-function hidePanel() {
-  document.getElementById('panelPopup').classList.remove('show');
-}
-
-function showTampilan() {
-  document.getElementById('tampilanPopup').classList.add('show');
-  document.getElementById('panelPopup').classList.remove('show'); // Tutup yang lain
-}
-
-function hideTampilan() {
-  document.getElementById('tampilanPopup').classList.remove('show');
-}
-  </script>
+  function backToQR() {
+    document.getElementById("panel-shop").style.display = "none";
+    document.getElementById("main-content").style.display = "block";
+  }
+</script>
 
 </body>
-      </html>
+</html>
