--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
   </div>
 </a>
 
-<a href="https://wa.me/6283106133182?text=Halo%20Admin%2C%20saya%20mau%20BUY%20TAMPILAN%20KAYA%20SAYA" target="_blank">
+<a href="https://wa.me/6283106133182?text=Halo%20Admin%2C%20saya%20mau%20BUY%20TAMPILAN%20KAYA%20%ANDA" target="_blank">
   <div class="payment-option option-tampilan">
-    <i class="fas fa-tv"></i> BUY TAMPILAN KAYA SAYA
+    <i class="fas fa-tv"></i> BUY TAMPILAN KAYA ANDA
   </div>
 </a>
 
